# filamind-flow

./: .gitattributes  .gitignore  AUTHORS  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md
backend/: .env.example  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  __main__.py  config.py  logging_config.py  main.py
backend/app/api/: router.py
backend/app/data/: driver_catalog.json  motor_catalog.json
backend/app/models/: schemas.py
backend/app/services/: __init__.py  axes_map_service.py  backup_service.py  batch_service.py  beacon_service.py  board_search.py  board_service.py  board_topology.py  build_service.py  camera_service.py  catalog_search.py  config_service.py  config_stealthchop.py  devices_store.py  driver_catalog.py  driver_search.py  drivers_apply.py  drivers_service.py  external_firmware.py  field_policy.py  firmware_identify.py  (+43 more)
backend/scripts/: bake_motor_catalog.py
backend/tests/: stub_moonraker.py  test_advanced_flash.py  test_apply_submission.py  test_axes_map.py  test_backup.py  test_batch.py  test_beacon.py  test_board_catalog.py  test_board_topology.py  test_boards.py  test_build.py  test_camera_service.py  test_catalog_entities.py  test_config.py  test_config_service.py  test_config_stealthchop.py  test_devices.py  test_driver_catalog.py  test_drivers.py  test_drivers_apply.py  test_e2e_smoke.py  test_external.py  test_field_policy.py  test_firmware.py  test_firmware_identify.py  test_flash.py  test_fleet.py  test_gcode_sim.py  test_hardware.py  test_hardware_db.py  test_hardware_indexing.py  test_hardware_links.py  test_health.py  test_host_catalog.py  test_host_control.py  test_kiosk_service.py  test_klipper_config.py  test_live_state.py  test_machine_doctor.py  test_macro_render.py  (+21 more)
(+407 files in other folders)
