[project]
name = "filamind-flow-backend"
version = "0.55.1"
description = "Extensible Neo-Brutalist control panel for Klipper / Moonraker — backend service."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-3.0-or-later" }
authors = [
    { name = "abdelmonem awad", email = "eg2@live.com" },
    { name = "Ahmed bebars", email = "Ahmedbebars1@gmail.com" },
]

[project.urls]
Homepage = "https://github.com/filamind-app/filamind-flow"
Repository = "https://github.com/filamind-app/filamind-flow"
Issues = "https://github.com/filamind-app/filamind-flow/issues"

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["app", "tests"]
# Vendored upstream code (Klipper) is kept verbatim — don't lint/format it.
extend-exclude = ["app/vendor"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "C4", "SIM", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI uses callables in argument defaults by design.
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Path", "fastapi.Body"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
python_version = "3.10"
# FilaMind runs on the Linux printer host; type-check for that target so
# Unix-only stdlib (e.g. termios) resolves the same on a Windows dev machine.
platform = "linux"
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
ignore_missing_imports = true
# Vendored upstream code (Klipper) is untyped — don't type-check it.
exclude = ["app/vendor/"]

[[tool.mypy.overrides]]
module = "app.vendor.*"
ignore_errors = true
